Closed Bug 1242295 Opened 8 years ago Closed 8 years ago

nsDeviceContextSpecWin.cpp(447): error C2664: 'HDC CreateICW(LPCWSTR,LPCWSTR,LPCWSTR,const DEVMODEW *)': cannot convert argument 2 from 'const char16_t *' to 'LPCWSTR'

Categories

(Core :: Widget: Win32, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox46 + fixed
firefox47 + fixed

People

(Reporter: xidorn, Assigned: xidorn)

References

Details

Attachments

(1 file)

New compile error with VS2015:
 6:13.46 widget/windows/nsDeviceContextSpecWin.cpp(447): error C2664: 'HDC CreateICW(LPCWSTR,LPCWSTR,LPCWSTR,const DEVMODEW *)': cannot convert argument 2 from 'const char16_t *' to 'LPCWSTR'
 6:13.46 widget/windows/nsDeviceContextSpecWin.cpp(447): note: Types pointed to are unrelated; conversion requires reinterpret_cast, C-style cast or function-style cast
Comment on attachment 8711511 [details]
MozReview Request: Bug 1242295 - Fix compile error in nsDeviceContextSpecWin. r?jimm

https://reviewboard.mozilla.org/r/32225/#review29071
Attachment #8711511 - Flags: review?(jmathies) → review+
Assignee: nobody → quanxunzhen
https://hg.mozilla.org/mozilla-central/rev/2570e9fe3098
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
Blocks: 1238964
Comment on attachment 8711511 [details]
MozReview Request: Bug 1242295 - Fix compile error in nsDeviceContextSpecWin. r?jimm

Approval Request Comment
[Feature/regressing bug #]: bug 1238964
[User impact if declined]: no user impact, but developers who use VS2015 would not be able to compile the aurora branch
[Describe test coverage new/current, TreeHerder]: n/a
[Risks and why]: no risk, just fix a compile error on VS2015
[String/UUID change made/needed]: n/a
Attachment #8711511 - Flags: approval-mozilla-aurora?
Recent regression, tracking.
Comment on attachment 8711511 [details]
MozReview Request: Bug 1242295 - Fix compile error in nsDeviceContextSpecWin. r?jimm

Fix for recent regression, please uplift to aurora.
Attachment #8711511 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: