Bug 1242295 - Fix compile error in nsDeviceContextSpecWin. r=jimm, a=lizzard